--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -2,10 +2,10 @@
     "ServiceInfo": {
         "Version": "0.1.8",
         "Descripcion": "Servicio PGOSB",
-        "HttpPort": 9092
+        "HttpPort": 8082
     },
     "SslConfig": {
-        "EnabledSslHttp": true,
+        "EnabledSslHttp": false,
         "Path": "/etc/letsencrypt/archive/hackorlandodev.com/fullchain.pem",
         "PathToKey": "/etc/letsencrypt/archive/hackorlandodev.com/privkey.pem"
     }
