--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@tanstack/react-table": "^8.17.3",
         "axios": "^1.7.2",
         "framer-motion": "^11.2.12",
+        "js-cookie": "^3.0.5",
+        "jwt-decode": "^4.0.0",
         "react": "^18.2.0",
         "react-accessible-treeview": "^2.9.1",
         "react-dom": "^18.2.0",
