--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@react-pdf/renderer": "^3.4.4",
         "@tanstack/react-table": "^8.17.3",
         "axios": "^1.7.2",
+        "date-fns": "^3.6.0",
         "framer-motion": "^11.2.12",
         "js-cookie": "^3.0.5",
         "jwt-decode": "^4.0.0",
