--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@hookform/resolvers": "^3.9.0",
         "@react-pdf/renderer": "^3.4.4",
         "@tanstack/react-table": "^8.17.3",
         "axios": "^1.7.2",
@@ -24,7 +25,8 @@
         "react-icons": "^5.2.1",
         "react-router-dom": "^6.23.1",
         "react-toastify": "^10.0.5",
-        "react-use-measure": "^2.1.1"
+        "react-use-measure": "^2.1.1",
+        "zod": "^3.23.8"
     },
     "devDependencies": {
         "@hookform/devtools": "^4.3.1",
