--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "react-router-dom": "^6.23.1",
         "react-toastify": "^10.0.5",
         "react-use-measure": "^2.1.1",
+        "react-window": "^1.8.10",
         "zod": "^3.23.8"
     },
     "devDependencies": {
