--- a/server/config/appsettings.json
+++ b/server/config/appsettings.json
@@ -1,12 +1,12 @@
 {
     "ServiceInfo": {
-        "Version": "0.8.0",
+        "Version": "0.8.2",
         "Descripcion": "Servicio PGOSB",
-        "HttpPort": 8082
+        "HttpPort": 8083
     },
     "SslConfig": {
-        "EnabledSslHttp": false,
-        "Path": "/etc/letsencrypt/archive/hackorlandodev.com/fullchain.pem",
-        "PathToKey": "/etc/letsencrypt/archive/hackorlandodev.com/privkey.pem"
+        "EnabledSslHttp": true,
+        "Path": "./config/gres.local.net.pem",
+        "PathToKey": "./config/gres.local.net-key.pem"
     }
 }
