--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -2,10 +2,11 @@ version: '3.8' # Specify Docker Compose version
 
 services:
   pgosb_web_app:
-    image: orlandoiii/pgosb_web_app:0.8.0 # Your Docker image name
+    image: orlandoiii/pgosb_web_app:0.8.2 # Your Docker image name
     container_name: pgosb_web_app # (Optional) Custom container name
     ports:
-      - "8082:8082"  # Expose port 8080 (adjust if your app uses a different port)
-    #volumes:
-     # - ./config:/app/config # Mount the host's config directory to the container's /app/config
+      - "8083:8083"  # Expose port 8080 (adjust if your app uses a different port)
+    volumes:
+      - /etc/letsencrypt/archive/hackorlandodev.com/:/etc/letsencrypt/archive/hackorlandodev.com/
+      - /etc/letsencrypt/live/hackorlandodev.com/:/etc/letsencrypt/live/hackorlandodev.com/
   
