cambio de contrasena y export implementado

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
         "@tanstack/react-table": "^8.17.3",
         "axios": "^1.7.2",
         "date-fns": "^3.6.0",
+        "filefy": "^0.1.11",
         "framer-motion": "^11.2.12",
         "js-cookie": "^3.0.5",
         "jwt-decode": "^4.0.0",
+        "pgosb_react": "file:",
         "react": "^18.2.0",
         "react-accessible-treeview": "^2.9.1",
         "react-dom": "^18.2.0",
