--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "pgosb_react": "file:",
         "react": "^18.2.0",
         "react-accessible-treeview": "^2.9.1",
+        "react-datepicker": "^7.3.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.51.5",
         "react-icons": "^5.2.1",
