server for deploy

--- a/server/config/appsettings.json
+++ b/server/config/appsettings.json
@@ -6,7 +6,7 @@
     },
     "SslConfig": {
         "EnabledSslHttp": true,
-        "Path": "./config/gres.local.net.pem",
-        "PathToKey": "./config/gres.local.net-key.pem"
+        "Path": "/etc/letsencrypt/archive/hackorlandodev.com/fullchain1.pem",
+        "PathToKey": "/etc/letsencrypt/archive/hackorlandodev.com/privkey1.pem"
     }
 }
