--- a/server/config/appsettings-contabo.json
+++ b/server/config/appsettings-contabo.json
@@ -6,7 +6,7 @@
     },
     "SslConfig": {
         "EnabledSslHttp": true,
-        "Path": "/app/config/gres.local.net.pem",
-        "PathToKey": "/app/config/gres.local.net-key.pem"
+        "Path": "/etc/letsencrypt/archive/hackorlandodev.com/fullchain3.pem",
+        "PathToKey": "/etc/letsencrypt/archive/hackorlandodev.com/privkey3.pem"
     }
 }
