--- a/server/config/appsettings.json
+++ b/server/config/appsettings.json
@@ -1,12 +1,12 @@
 {
     "ServiceInfo": {
-        "Version": "1.0.2",
+        "Version": "0.8.3",
         "Descripcion": "Servicio PGOSB",
         "HttpPort": 8083
     },
     "SslConfig": {
         "EnabledSslHttp": true,
-        "Path": "/app/config/gres.local.net.pem",
-        "PathToKey": "/app/config/gres.local.net-key.pem"
+        "Path": "/etc/letsencrypt/archive/hackorlandodev.com/fullchain3.pem",
+        "PathToKey": "/etc/letsencrypt/archive/hackorlandodev.com/privkey3.pem"
     }
 }
